package com.factory.framework;

/**
 * 表示产品的类。
 * <p>
 * 定义了产品是『任意的可以 use 』的东西。
 *
 * @author hf huminxi2017@gmail.com
 * @version on 2018/12/11 14:19
 */
public abstract class Product {

    public abstract void use();
}
